--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,11 @@
+body {
+    --dark-color:maroon;
+    --light-color:mistyrose;
+}
+
 header {
-    background-color: mistyrose;
-    border:medium maroon solid;
+    background-color: var(--light-color);
+    border:medium var(--dark-color) solid;
 }
 
 header img {
@@ -11,9 +16,16 @@ div.clearfix{
     clear:both;
 }
 
+header img, header h1 {
+    margin-right:5px;
+}
+
+header h1 {
+    margin-top: center;
+}
 
 header h1, header p {
-    color:maroon;
+    color:var(--dark-color);
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -41,7 +53,7 @@ p a {
 }
 
 main {
-    background-color: mistyrose;
+    background-color: var(--light-color);
 }
 main h2, main h3 {
     font-family: Arial, Helvetica, sans-serif;
