--- a/mystyles.css
+++ b/mystyles.css
@@ -21,7 +21,8 @@ header img, header h1 {
 }
 
 header h1 {
-    margin-top: center;
+    margin-top: 25px;
+    float:left;
 }
 
 header h1, header p {
